force-app/main/default/objects/Contact/fields/Current_Team__c.field-meta.xml
<CustomField>
    <fullName>Current_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Team</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Players</relationshipLabel>
    <relationshipName>Players</relationshipName>
    <type>Lookup</type>
</CustomField>