force-app/main/default/objects/Contact/fields/Dashboard_Role__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Role__c</fullName>
    <label>Dashboard Role</label>
    <description>Role for external dashboard access. Determines permissions in the Match Moments web portal.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>super_admin</fullName>
                <label>Super Admin</label>
            </value>
            <value>
                <fullName>admin</fullName>
                <label>Admin</label>
            </value>
            <value>
                <fullName>team_portal</fullName>
                <label>Team Portal</label>
            </value>
            <value>
                <fullName>sponsor_portal</fullName>
                <label>Sponsor Portal</label>
            </value>
            <value>
                <fullName>media_partner</fullName>
                <label>Media Partner</label>
            </value>
            <value>
                <fullName>customer_success</fullName>
                <label>Customer Success</label>
            </value>
            <value>
                <fullName>view_only</fullName>
                <label>View Only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>