force-app/main/default/objects/Contact/fields/ESPN_ID__c.field-meta.xml
<CustomField>
    <fullName>ESPN_ID__c</fullName>
    <description>Unique Player ID from ESPN API (universal field name replacing ESPN_Player_ID__c)</description>
    <externalId>true</externalId>
    <label>ESPN ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>