force-app/main/default/objects/Contact/fields/ESPN_Player_ID__c.field-meta.xml
<CustomField>
    <fullName>ESPN_Player_ID__c</fullName>
    <externalId>true</externalId>
    <label>ESPN Player ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>