force-app/main/default/objects/Contact/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <label>Height (cm)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <description>Player's height in centimeters</description>
</CustomField>