force-app/main/default/objects/Contact/fields/Jersey_Number__c.field-meta.xml
<CustomField>
    <fullName>Jersey_Number__c</fullName>
    <label>Jersey Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>