force-app/main/default/objects/Contact/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <label>Nationality</label>
    <type>Text</type>
    <length>100</length>
    <description>Player's nationality or country of origin</description>
</CustomField>