force-app/main/default/objects/Contact/fields/Physical_Stats__c.field-meta.xml
<CustomField>
    <fullName>Physical_Stats__c</fullName>
    <description>Formatted string e.g., "1.85m / 80kg"</description>
    <label>Physical Stats</label>
    <length>50</length>
    <type>Text</type>
</CustomField>