force-app/main/default/objects/Contact/fields/Player_Role__c.field-meta.xml
<CustomField>
    <fullName>Player_Role__c</fullName>
    <label>Player Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Player</fullName>
                <default>true</default>
                <label>Player</label>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Official</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>