force-app/main/default/objects/Contact/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Goalkeeper</fullName>
            </value>
            <value>
                <fullName>Defender</fullName>
            </value>
            <value>
                <fullName>Midfielder</fullName>
            </value>
            <value>
                <fullName>Forward</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Coach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>