force-app/main/default/objects/Contact/fields/Roster_Status__c.field-meta.xml
<CustomField>
    <fullName>Roster_Status__c</fullName>
    <description>Current status of the player/staff member</description>
    <label>Roster Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Injured</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Loaned Out</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>