force-app/main/default/objects/Contact/fields/Total_Awards__c.field-meta.xml
<CustomField>
    <fullName>Total_Awards__c</fullName>
    <description>Total awards for this player</description>
    <label>Total Awards</label>
    <summaryForeignKey>Award__c.Player__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>