force-app/main/default/objects/Contact/fields/Total_Individual_Awards__c.field-meta.xml
<CustomField>
    <fullName>Total_Individual_Awards__c</fullName>
    <description>Total individual awards</description>
    <label>Total Individual Awards</label>
    <summaryFilterItems>
        <field>Award__c.Award_Category__c</field>
        <operation>equals</operation>
        <value>Individual Award</value>
    </summaryFilterItems>
    <summaryForeignKey>Award__c.Player__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>