force-app/main/default/objects/Contact/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight (kg)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <description>Player's weight in kilograms</description>
</CustomField>